--- a/smh/app/resource/qss/dark/gallery_interface.qss
+++ b/smh/app/resource/qss/dark/gallery_interface.qss
@@ -1,4 +1,4 @@
-GalleryInterface,
+AnalysisInterface,
 ToolBar,
 #view {
     background-color: transparent;
@@ -13,7 +13,7 @@ ToolBar>CaptionLabel {
     color: white;
 }
 
-ExampleCard {
+AnalysisWidget {
     background-color: transparent;
     color: white;
 }
@@ -23,18 +23,18 @@ StrongBodyLabel {
     color: white;
 }
 
-ExampleCard>#card {
+AnalysisWidget>#card {
     border: 1px solid rgb(36, 36, 36);
     border-radius: 10px;
     background-color: rgba(0, 0, 0, 0.1795);
 }
 
-ExampleCard>#card QLabel {
+AnalysisWidget>#card QLabel {
     font: 14px 'Segoe UI', 'Microsoft YaHei', 'PingFang SC';
     color: white;
 }
 
-ExampleCard>#card InfoBadge {
+AnalysisWidget>#card InfoBadge {
     font-size: 11px;
 }
 
